--- a/links.html
+++ b/links.html
@@ -1,13 +1,59 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <title>DUS - Survey Links</title>
+  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+
+<style>
+  
+  /* h1 {text-align: center;}
+
+ */
+  h2 {text-align: center;}
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  width: 300px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.red {background-color: #f44336;;} /* Red */
+.blue {background-color: #008CBA;;} /* Blue */ 
+
+</style>
+
 
 </head>
 <body>
-  <script>
-    let url = "https://silverliningresearch.github.io/BER_PS_2024/links";
-    window.location.href = url;
-</script>
+
+  <h2>DUS - Survey Links</h2>
+  <div style="background-color: lightblue;">
+  </br>
+  </div>
+
+   <h3>
+
+    </br> </br>
+    <a href="https://silverliningresearch.github.io/dus/DailyPlan.html" target="_blank">
+      02. Passenger Survey - Daily Plan
+    </a>
+    </br> </br>
+
+    <a href="https://silverliningresearch.github.io/dus/DailyPlan" target="_blank">
+      03. ASQ Survey - Daily Plan</a>
+    </br> </br>
+
+  </h3>
 
 
 </body>
 </html>
+
+
