update new files

--- a/DailyPlan.html
+++ b/DailyPlan.html
@@ -1,7 +1,7 @@
 <html>
     <head>
 		<title>Daily plan - DUS ASQ Survey</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.svg">
     
     <script src="data/ASQ_Quota_Airline_Dest.js"></script>
     <script src="data/ASQ_Quota_Airlines.js"></script>
