--- a/links.html
+++ b/links.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>DUS - Survey Links</title>
-  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="images/favicon.svg">
 
 <style>
   
@@ -41,13 +41,8 @@
    <h3>
 
     </br> </br>
-    <a href="https://silverliningresearch.github.io/dus/DailyPlan.html" target="_blank">
-      02. Passenger Survey - Daily Plan
-    </a>
-    </br> </br>
-
     <a href="https://silverliningresearch.github.io/dus/DailyPlan" target="_blank">
-      03. ASQ Survey - Daily Plan</a>
+      01. ASQ Survey - Daily Plan</a>
     </br> </br>
 
   </h3>
