update new files

--- a/DailyPlan.html
+++ b/DailyPlan.html
@@ -6,7 +6,7 @@
     <script src="data/ASQ_Quota_Airline_Dest.js"></script>
     <script src="data/ASQ_Quota_Airlines.js"></script>
     <script src="data/ASQ_Quota_Dest.js"></script>
-    <script src="data/flight_list_Departure.js"></script>
+    <script src="data/flight_list.js"></script>
 
     <script src="scripts/PrepareData_ASQ.js"></script>
     <script src="scripts/CalculateData_ASQ.js"></script>
@@ -122,19 +122,19 @@
           'options': options_Terminal
         });
 
-        // var options = {
-        //   'filterColumnLabel': 'Gate Area',
-        //   "ui": {"label": "", 
-        //         "labelStacking": 'horizotal',
-        //         "caption": "Select Gate Area",
-        //         }
-        // };
+        var options_date = {
+          'filterColumnLabel': 'Date',
+          "ui": {"label": "", 
+                "labelStacking": 'horizotal',
+                "caption": "Select Date",
+                }
+        };
         
-        // var tableFilter = new google.visualization.ControlWrapper({
-        //   'controlType': 'CategoryFilter',
-        //   'containerId': 'filter_div',
-        //   'options': options
-        // });
+        var tableFilter_date = new google.visualization.ControlWrapper({
+          'controlType': 'CategoryFilter',
+          'containerId': 'filter_date',
+          'options': options_date
+        });
 
         // Create table
         var tableChart = new google.visualization.ChartWrapper({
@@ -148,7 +148,7 @@
           }
         });
 
-        dashboard.bind([tableFilter_Terminal], tableChart);
+        dashboard.bind([tableFilter_Terminal, tableFilter_date], tableChart);
 
         var view = new google.visualization.DataView(data);
         view.hideColumns([priority_col, priority_col-1]); //unncessary columns: Date_Tome & priority
@@ -175,7 +175,10 @@
     <div id="dashboard_div">
       <!--Divs that will hold each control and chart-->
       <div id="filter_terminal"></div>
+      <div id="filter_date"></div>
+
       </br>
+
       <div id="filter_div" style="font-size: 15px"> </div>
       </br>
       <div id="table_div"></div>
