--- a/QuotaReport.html
+++ b/QuotaReport.html
@@ -6,7 +6,7 @@
     <script src="data/ASQ_Quota_Airline_Dest.js"></script>
     <script src="data/ASQ_Quota_Airlines.js"></script>
     <script src="data/ASQ_Quota_Dest.js"></script>
-    <script src="data/flight_list_Departure.js"></script>
+    <script src="data/flight_list.js"></script>
 
     <script src="scripts/PrepareData_ASQ.js"></script>
     <script src="scripts/CalculateData_ASQ.js"></script>
