update new files

--- a/DailyPlan.html
+++ b/DailyPlan.html
@@ -45,7 +45,7 @@
         //define header
         data.addColumn('string', 'Date');
         data.addColumn('string', 'Time');
-        //data.addColumn('number', 'TER');
+        data.addColumn('string', 'TER');
         data.addColumn('string', 'Flight');
         data.addColumn('string', 'To');
         data.addColumn('number', 'Remaining Flights');
@@ -73,7 +73,7 @@
             data.addRows([[
                 row.Date, 
                 row.Time, 
-                //row.TER, 
+                row.Terminal, 
                 row.Flight_Show, row.Dest, 
                 Number(row.remaining_flights), Number(row.Quota), Number(row.Completed), 
                 Number(row.Difference), 
