update new files

--- a/DailyPlan.html
+++ b/DailyPlan.html
@@ -109,10 +109,10 @@
 
        //create fiter
        var options_Terminal = {
-          'filterColumnLabel': 'To',
+          'filterColumnLabel': 'TER',
           "ui": {"label": "", 
                 "labelStacking": 'horizotal',
-                "caption": "Select destination",
+                "caption": "Select Terminal",
                 }
         };
 
@@ -172,6 +172,7 @@
     <h5 id="download_time_asq"></h5>
     <h4 id="overall_status"></h4>
     
+
     <div id="dashboard_div">
       <!--Divs that will hold each control and chart-->
       <div id="filter_terminal"></div>
