--- a/links.html
+++ b/links.html
@@ -45,7 +45,7 @@
       01. ASQ Survey - Daily Plan</a>
     </br> </br>
 
-    <a href="https://silverliningresearch.github.io/dus/Schegen.html" target="_blank">
+    <a href="https://silverliningresearch.github.io/dus/Schengen.html" target="_blank">
       99. Schengen Countries</a>
     </br> </br>
 	
